--- a/CreoPlugin.vcxproj.filters
+++ b/CreoPlugin.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\thirdparty">
+      <UniqueIdentifier>{efc7766c-8152-4987-9814-4b7afd7fa225}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -20,6 +23,9 @@
     </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="thirdParty\logger\EasyLog.hpp">
+      <Filter>Header Files\thirdparty</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
