--- a/CreoPlugin.vcxproj.filters
+++ b/CreoPlugin.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CreoPlugin.cpp">
+    <ClCompile Include="src\CreoPlugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
