--- a/CreoPlugin.vcxproj.filters
+++ b/CreoPlugin.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="thirdParty\logger\EasyLog.hpp">
       <Filter>Header Files\thirdparty</Filter>
     </ClInclude>
+    <ClInclude Include="includes\DispObjectRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CreoPlugin.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DispObjectRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
