--- a/CreoPlugin.vcxproj.filters
+++ b/CreoPlugin.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="includes\LineToTriangleConverter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="includes\ModelIterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\CreoNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -51,6 +57,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\LineToTriangleConverter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ModelIterator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CreoNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
